[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

axum = { version = "0.6.18", features = ["multipart", "headers", "macros"] }
serde = { version = "1.0", features = ["derive"] }
mongodb = "2.5.0"
serde_json = "1.0"
dotenv = "0.15.0"
azure_storage_blobs = "0.12.0"
azure_storage = "0.12.0"
azure_core = "0.12.0"
lazy_static = "1.4.0"
async-trait = "0.1.68"
time = "0.3.22"
tracing-subscriber = "0.3.17"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.27"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
