[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

axum = { version = "0.6.18", features = ["multipart", "headers", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
mongodb = { version = "2.5.0" }
azure_storage_blobs = "0.13.1"
azure_storage = "0.13.0"
azure_core = "0.13.0"
lazy_static = "1.4.0"
async-trait = "0.1.68"
tracing-subscriber = "0.3.17"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.27"
futures-util = "0.3.28"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
